--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "deep-fy-test1",
-  "version": "7.0.0",
+  "name": "nova-plus",
+  "version": "1.0.0",
   "description": "Components Library for deep light",
   "keywords": [
     "code-editor"
