--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "unpub": "npm unpublish deep-light --force"
   },
   "dependencies": {
+    "monaco-editor": "^0.40.0",
     "sortablejs": "^1.15.0",
     "uuid": "^9.0.0",
     "vue": "^3.3.4",
@@ -45,6 +46,7 @@
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.3.2",
     "@vue/tsconfig": "^0.4.0",
+    "element-plus": "^2.3.8",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
     "jest": "^29.6.1",
@@ -53,6 +55,8 @@
     "sass": "^1.64.1",
     "sass-loader": "^13.3.2",
     "typescript": "~5.0.4",
+    "unplugin-auto-import": "^0.16.6",
+    "unplugin-vue-components": "^0.25.1",
     "unplugin-vue-define-options": "^1.3.11",
     "vite": "^4.3.9",
     "vite-eslint-plugin": "^1.9.2",
