--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Components Library for deep light",
   "keywords": [
-    "code-editor"
+    "code-editor",
+    "json-virtual-table"
   ],
   "author": "jingpengju",
   "license": "BSI",
