code build slimming

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "deeplll",
-  "version": "1.0.13",
+  "name": "nova-plus",
+  "version": "1.0.0",
   "description": "Components Library for deep light",
   "keywords": [
     "code-editor",
