code build typescript file

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
-    "lib": ["ESNext"],
+    "lib": ["ESNext", "dom"],
     "esModuleInterop": true,
     "moduleResolution": "node",
     "strict": true,
