--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,15 @@
-{
+{ 
+  "compilerOptions": {
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "lib": ["ESNext", "dom"],
+    "declaration": true,
+    "declarationDir": "dist/types",
+    "outDir": "dist",
+    "strict": true,
+    "esModuleInterop": true
+  },
   "files": [],
   "references": [
     {
