--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "nova-plus",
-  "version": "1.0.7",
+  "name": "a-plus",
+  "version": "1.0.0",
   "description": "Components Library for deep light",
   "keywords": [
     "code-editor",
     "json-virtual-table"
   ],
-  "author": "jingpengju",
+  "author": "Thales",
   "license": "BSI",
   "scripts": {
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
@@ -17,16 +17,18 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "format": "prettier --write packages/",
-    "start": "npm run dev",
+    "start": "npm run dev -s",
     "dev": "vite",
-    "build": "vite build",
+    "build:vite": "vite build",
+    "figlet": "node scripts/figlet.js",
+    "build": "npm run build:vite -s && npm run figlet -s",
     "major": "npm version major -m 'build: update major'",
     "minor": "npm version minor -m 'build: update minor'",
     "patch": "npm version patch -m 'build: update patch'",
-    "pub": "npm run build && cd dist/ && npm publish --access=public",
-    "pub:major": "npm run major && npm run build && cd dist/ &&npm publish --access=public",
-    "pub:minor": "npm run minor && npm run build && cd dist/ && npm publish --access=public",
-    "pub:patch": "npm run patch && npm run build && cd dist/ && npm publish --access=public",
+    "pub": "npm run build:vite -s && cd dist/ && npm publish --access=public && npm run figlet -s",
+    "pub:major": "npm run major && npm run build:vite -s && cd dist/ && npm publish --access=public && npm run figlet -s",
+    "pub:minor": "npm run minor && npm run build:vite -s && cd dist/ && npm publish --access=public && npm run figlet -s",
+    "pub:patch": "npm run patch && npm run build:vite -s && cd dist/ && npm publish --access=public && npm run figlet -s",
     "unpub": "npm unpublish deep-light --force"
   },
   "dependencies": {
@@ -48,12 +50,15 @@
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.3.2",
     "@vue/tsconfig": "^0.4.0",
+    "cowsay": "^1.5.0",
     "element-plus": "^2.3.8",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
+    "figlet": "^1.6.0",
     "jest": "^29.6.1",
     "node-sass": "^9.0.0",
     "prettier": "^2.8.8",
+    "rollup-plugin-visualizer": "^5.9.2",
     "sass": "^1.64.1",
     "sass-loader": "^13.3.2",
     "typescript": "~5.0.4",
