--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "a-plus",
-  "version": "2.1.1",
+  "name": "aak-plus",
+  "version": "1.0.0",
   "description": "Components Library for deep light",
   "keywords": [
     "code-editor",
