--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "dev": "vite",
     "build:vite": "vite build",
     "figlet": "node scripts/figlet.js",
-    "build": "npm run build:vite -s && npm run figlet -s",
+    "build": "npm run build:vite -s && npm run figlet -s true",
     "major": "npm version major -m 'build: update major'",
     "minor": "npm version minor -m 'build: update minor",
     "patch": "npm version patch -m 'build: update patch'",
-    "pub": "npm run build:vite -s && cd dist/ && npm publish --access=public && npm run figlet -s",
-    "pub:major": "npm run major && npm run build:vite -s && cd dist/ && npm publish --access=public && cd .. && npm run figlet -s",
-    "pub:minor": "npm run minor && npm run build:vite -s && cd dist/ && npm publish --access=public && cd .. && npm run figlet -s",
-    "pub:patch": "npm run patch && npm run build:vite -s && cd dist/ && npm publish --access=public && cd .. && npm run figlet -s",
+    "pub:node": "node scripts/publish.js",
+    "pub": "npm run build:vite -s && npm run pub:node -s && npm run figlet -s",
+    "pub:major": "npm run major && npm run build:vite -s && npm run pub:node -s && npm run figlet -s",
+    "pub:minor": "npm run minor && npm run build:vite -s && npm run pub:node -s && npm run figlet -s",
+    "pub:patch": "npm run patch && npm run build:vite -s && npm run pub:node -s && npm run figlet -s",
     "unpub": "npm unpublish deep-light --force"
   },
   "dependencies": {
