--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thssss_i",
+  "name": "nova-plus",
   "version": "1.0.0",
   "description": "Components Library for deep light",
   "keywords": [
